# muparser

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  Changes.txt  Install.txt  License.txt  Makefile.in  README.md  README.rst  appveyor.yml  configure
.github/workflows/: c-cpp.yml
archives/: Readme.txt
branches/: Readme.txt
branches/muParserSSE/: Readme.txt
branches/muParserSSE/asmjit/: asmjit.sln  asmjit.vcproj  asmjit.vcxproj  asmjit.vcxproj.filters
branches/muParserSSE/asmjit/AsmJit-0.8.6/: CHANGELOG.txt  CMakeLists.txt  COPYING.txt  README.txt  TODO.txt  configure-borland-debug.bat  configure-borland-release.bat  configure-linux-debug.sh  configure-linux-release.sh  configure-mingw-debug.bat  configure-mingw-release.bat  configure-msvc-debug.bat  configure-msvc-release.bat
branches/muParserSSE/asmjit/AsmJit-0.8.6/AsmJit/: AsmJit.h  Assembler.h  AssemblerX86X64.cpp  AssemblerX86X64.h  Build.h  Compiler.h  CompilerX86X64.cpp  CompilerX86X64.h  Config.h  CpuInfo.cpp  CpuInfo.h  Defs.cpp  Defs.h  DefsX86X64.h  Lock.cpp  Lock.h  Logger.cpp  Logger.h  LoggerX86X64.cpp  LoggerX86X64.h  LoggerX86X64Dump.cpp  LoggerX86X64Dump.py  MemoryManager.cpp  MemoryManager.h  Serializer.h  SerializerX86X64.cpp  SerializerX86X64.h  Util.cpp  Util.h  VirtualMemory.cpp  VirtualMemory.h  WarningsPop.h  WarningsPush.h
branches/muParserSSE/asmjit/AsmJit-0.8.6/doc/: Doxygen
branches/muParserSSE/asmjit/AsmJit-0.8.6/test/: testcompiler.cpp  testcpu.cpp  testdummy.cpp  testfunclargeargs.cpp  testjit.cpp  testjumpshort.cpp  testjumptable.cpp  testmemorymanager.cpp  testopcode.cpp  testrep.cpp  testrewrite.cpp  testsetcc.cpp  teststate.cpp  testtrampoline.cpp  testvariables.cpp  testvarmemalloc.cpp  testvarspill.cpp
branches/muParserSSE/example/: example.c  example.vcproj  example.vcxproj  example.vcxproj.filters  muParserSSE.sln
branches/muParserSSE/example_csharp/: WndSample.Designer.cs  WndSample.cs  example_csharp.csproj  example_csharp.sln  muParser.cs
branches/muParserSSE/example_csharp/Properties/: Settings.Designer.cs
branches/muParserSSE/parser/: mecCallback.cpp  mecCallback.h  mecDef.h  mecError.cpp  mecError.h  mecExprCompiler.cpp  mecExprCompiler.h  mecParser.cpp  mecParser.h  mecParserBase.cpp  mecParserBase.h  mecReversePolishNotation.cpp  mecReversePolishNotation.h  mecStack.h  mecToken.cpp  mecToken.h  mecTokenReader.cpp  mecTokenReader.h  mecUnitTest.cpp  mecUnitTest.h  muParserSSE.cpp  muParserSSE.h  muParserSSE.vcproj  muParserSSE.vcxproj  muParserSSE.vcxproj.filters
branches/muparser3/: Changes.txt
branches/muparser3/include/: muParser.h  muParserBase.h  muParserBytecode.h  muParserDef.h  muParserError.h  muParserMath.h  muParserStack.h  muParserTest.h  muParserToken.h  muParserTokenReader.h  muPrecompiledEngines.h
branches/muparser3/samples/example1/: example1.cpp
branches/muparser3/samples/example2/: example2.c
branches/muparser_barebone/include/: muParser.h  muParserBase.h  muParserBytecode.h  muParserCallback.h  muParserDef.h  muParserError.h  muParserTest.h  muParserToken.h  muParserTokenReader.h
branches/muparser_barebone/samples/example1/: example1.cpp
branches/muparser_barebone/samples/example2/: example2.c
branches/muparser_barebone/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserError.cpp  muParserTest.cpp  muParserTokenReader.cpp
branches/muparser_cp/: Changes.txt  License.txt  cleanup.bat  copy_from_trunk.bat  doxyfile
branches/muparser_cp/ParserDLL/: muParser.vcproj  muParserDLL.h  muParserDLL.sln
branches/muparser_cp/ParserDLL/Debug/: muParser.lib
branches/muparser_cp/ParserDLL/Release/: muParser.lib
branches/muparser_cp/ParserLib/: muParser.cpp  muParser.h  muParser.sln  muParser.vcproj  muParserBase.cpp  muParserBase.h  muParserBytecode.cpp  muParserBytecode.h  muParserDef.h  muParserError.cpp  muParserError.h  muParserFixes.h  muParserInt.h  muParserTemplateMagic.h  muParserTest.cpp  muParserTest.h  muParserToken.h  muParserTokenReader.cpp  muParserTokenReader.h
branches/muparser_cp/example1/: example1.cpp  example1.sln  example1.vcproj
branches/muparser_cp/example2/: example2.c  example2.sln  example2.vcproj
branches/muparser_cp/example_csharp/: Program.cs  WndSample.Designer.cs  WndSample.cs  example_csharp.csproj  example_csharp.sln  muParser.cs
branches/muparser_cp/example_csharp/Properties/: AssemblyInfo.cs  Resources.Designer.cs
branches/muparser_csharp/: example.sln
branches/muparser_csharp/example/: Program.cs  WndSample.Designer.cs  WndSample.cs  example.csproj
branches/muparser_csharp/muparser_csharp/: muparser.cs  muparser_csharp.csproj
cmake/: muParserConfig.cmake.in  muParserConfigVersion.cmake.in
docs/: muparser_doc.html
docs/html/: mup_interface.html  mup_licence.html  mup_usage.html
docs/html/misc/: calc.cpp  example.txt  footer.html  header.html  listvar.cpp
docs/html/sources/: build_page.sh  mup_features.html  mup_licence.html  mup_licence_meta.html  mup_links_meta.html  mup_locale_meta.html  mup_usage_meta.html  mup_version.html
docs/html/style/: formate.css
enc_temp_folder/eb23fe6ba4bc2f7e2b370abbe596a5c/: muParserTest.cpp
include/: muParser.h  muParserBase.h  muParserBytecode.h  muParserCallback.h  muParserDLL.h  muParserDef.h  muParserDef.h.in  muParserError.h  muParserFixes.h  muParserInt.h  muParserStack.h  muParserTemplateMagic.h  muParserTest.h  muParserToken.h  muParserTokenReader.h
samples/example1/: example1.cpp
samples/example2/: Readme.txt  example2.c
samples/example3/: example3.cpp
src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserDLL.cpp  muParserError.cpp  muParserInt.cpp  muParserTest.cpp  muParserTokenReader.cpp
trunk/: Changes.txt
trunk/docs/html/: index.html  mup_features.html  mup_links.html  mup_locale.html  mup_version.html
trunk/include/: muParserBase.h  muParserDef.h  muParserError.h  muParserTest.h
trunk/src/: muParserBase.cpp  muParserBytecode.cpp  muParserDLL.cpp  muParserTest.cpp  muParserTokenReader.cpp
(+16 files in other folders)
